--- a/solutions/assignmet3-solution/styles/style.css
+++ b/solutions/assignmet3-solution/styles/style.css
@@ -13,16 +13,23 @@ h1{
 	font-size: 25px;	
 	height:40px;
 }
-input{
-	color:red;
-}
 span{
 	font-weight: bold;
 	font-size:15px;
 	color:green;
 }
 li{
+	color:blue;
+}
+li button{
 	color:red;
+	font-size:15px;
+	font-weight:bold;
+}
+#error{
+	color:red;
+	font-size:20px;
+	font-style: italic;
 }
 .input>input{
 	float:left;
