--- a/solutions/assignmet3-solution/styles/style.css
+++ b/solutions/assignmet3-solution/styles/style.css
@@ -15,11 +15,12 @@ h1{
 }
 span{
 	font-weight: bold;
-	font-size:15px;
+	font-size:18px;
 	color:green;
 }
 li{
-	color:blue;
+	color:#eb6134;
+	font-size:13px;
 }
 li button{
 	color:red;
