--- a/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
@@ -1,3 +1,3 @@
-<div>Item name: {{ itemDetail.name }}</div>
-<div>Item quantity: {{ itemDetail.quantity }}</div>
-<div>Item description: {{ itemDetail.description }}</div>
+<a ui-sref="home">Home</a>
+<h3>Our dishes in this category are:</h3>
+<items-list items="list.items"></items-list>
