--- a/examples/Lecture41/src/shoppinglist/templates/main-shoppinglist.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/main-shoppinglist.template.html
@@ -1,6 +1,6 @@
-<a ui-sref="home">Home</a> &lt; <span>Categories</span>
+<a ui-sref="home">Home</a> &lt; <span>List</span>
 
-<h3>Our Menu Categories are:</h3>
-<category-list items="list.items"></category-list>
-<!-- 
-<ui-view></ui-view> -->
+<h3>Premade List with Absolutely No Cookies in it</h3>
+<shopping-list items="mainList.items"></shopping-list>
+
+<ui-view></ui-view>
