--- a/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
@@ -1,3 +1,3 @@
-<div>Item name: {{ itemDetail.name }}</div>
-<div>Item quantity: {{ itemDetail.quantity }}</div>
-<div>Item description: {{ itemDetail.description }}</div>
+<div>Item name: {{ list.name }}</div>
+<div>Item quantity: {{ list.quantity }}</div>
+<div>Item description: {{ list.description }}</div>
