--- a/examples/Lecture41/src/shoppinglist/templates/shoppinglist.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/shoppinglist.template.html
@@ -1,5 +1,5 @@
 <ul>
   <li ng-repeat="item in $ctrl.items" ui-sref="categoryList.categoryDetail({categoryId: $index})">
-    {{ item.quantity }} of {{ item.name }}
+    {{ item.short_name }} of {{ item.name }}
   </li>
 </ul>
