--- a/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
@@ -1,3 +1,2 @@
-<div>Item name: {{ list.name }}</div>
-<div>Item quantity: {{ list.quantity }}</div>
-<div>Item description: {{ list.description }}</div>
+<h2>Our Dishes in this Category are: </h2>
+<item-list items='list.items'></item-list>
