--- a/examples/Lecture41/src/shoppinglist/templates/shoppinglist.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/shoppinglist.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="item in $ctrl.items" ui-sref="categoryList.categoryDetail({categoryId: item.short_name})">
-    {{ item.short_name }} of {{ item.name }}
-  </li>
+  <a><li ng-repeat="item in $ctrl.items" ui-sref="categoryDetail({categoryId: item.short_name})">
+    {{ item.name }} ({{ item.short_name }})
+  </li></a>
 </ul>
