--- a/examples/Lecture41/src/shoppinglist/templates/shoppinglist.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/shoppinglist.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <a><li ng-repeat="item in $ctrl.items" ui-sref="categoryDetail({categoryId: item.short_name})">
+  <a><li ng-repeat="item in $ctrl.items" ui-sref="categoryDetail">
     {{ item.name }} ({{ item.short_name }})
   </li></a>
 </ul>
