--- a/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
+++ b/examples/Lecture41/src/shoppinglist/templates/item-detail.template.html
@@ -1,2 +1,2 @@
 <h2>Our Dishes in this Category are: </h2>
-<item-list items='list.items'></item-list>
+<items-list items='list.items'></items-list>
