--- a/examples/Lecture41/src/shoppinglist/templates/itemsDisplay.html
+++ b/examples/Lecture41/src/shoppinglist/templates/itemsDisplay.html
@@ -1,4 +1,4 @@
-<a ui-sref='home'><h3>Home</h3></a>
+<a ui-sref="home">Home</a> &lt; <a ui-sref="categoryList">Show Categories</a> &lt; <span>Category Items</span>
 <ul>
   <li ng-repeat="item in $ctrl.items">
     {{ item.name }} ({{ item.short_name }})
