--- a/solutions/assignment4-solution/css/styles.css
+++ b/solutions/assignment4-solution/css/styles.css
@@ -1,31 +1,31 @@
-body {
-  font-size: 1.2em;
-  background-color: background-color: #61111f;
+body{
+  background-color: #61111f;
 }
 h1{
   color:#f6b319;
 }
+h2{
+  color:maroon;
+}
 span{
   font-weight: bold;
-  font-size:18px;
+  font-size:20px;
   color:green;
 }
 li{
   color:#eb6134;
-  font-size:13px;
+  font-size:24px;
 }
 .error {
   color: red;
   font-weight: bold;
   display: none;
 }
-
 .loading-icon {
   position: absolute;
   left: 50%;
   top: 10px;
 }
-
 li[ui-sref]:hover {
   display: inline-block;
   cursor: pointer;
