--- a/solutions/assignment3-solution/styles/style.css
+++ b/solutions/assignment3-solution/styles/style.css
@@ -4,37 +4,16 @@ body{
 h1{
 	color:#f6b319;
 }
-.input button{
-	width:50%;
-	float:right;
-	font-weight: bold;
+h2{
 	color:maroon;
-	background-color: green;
-	font-size: 25px;	
-	height:40px;
 }
 span{
 	font-weight: bold;
-	font-size:18px;
+	font-size:20px;
 	color:green;
 }
 li{
 	color:#eb6134;
-	font-size:13px;
+	font-size:24px;
 }
-li button{
-	color:red;
-	font-size:15px;
-	font-weight:bold;
-}
-#error{
-	color:red;
-	font-size:40px;
-	font-style: italic;
-	text-align: center;
-}
-.input>input{
-	float:left;
-	width:40%;
-	height:40px;
-}
+
