--- a/examples/Lecture59/css/signUp.css
+++ b/examples/Lecture59/css/signUp.css
@@ -1,5 +1,9 @@
 input{
 	margin-bottom: 15px;
-	margin-left:100px;
+	margin-left:200px;
 	align-items: center;
+}
+button{
+	margin-top: 15px;
+	margin-left: 200px;
 }
